--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
 	<script>
 
-const inputString = "Euvola is the best team TIIDELab Cohort5 Fellowship";
+const inputString = "Euvola is the best team in TIIDELab Cohort5 Fellowship";
 
-// Regular expression to match "is," "the," best "team"
+// Regular expression to match "the," best "team"
 const regex = /best|the|team/;
 
 if (regex.test(inputString)) {
   console.log("The input string contains one of the specified substrings.");
 } else {
-  console.log("The input string does not contain any of the specified substrings.");
+  console.log("The input string doesn't contain any of the specified substrings.");
 }
 
 	</script>
